# omninet

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md
Advisor/: CLAUDE.md  Cargo.toml
Advisor/src/: capability_floor.rs  config.rs  consent_escalation.rs  error.rs  federation_scope.rs  governance.rs  lib.rs  sacred.rs
Advisor/src/bridge/: abacus.rs  courier.rs  library.rs  mod.rs  podium.rs  quill.rs  studio.rs  tome.rs
Advisor/src/cognitive_loop/: action.rs  command.rs  inner_voice.rs  loop_state.rs  mod.rs
Advisor/src/engine/: capabilities.rs  claude.rs  context.rs  local.rs  mod.rs  provider.rs  registry.rs  router.rs
Advisor/src/pressure/: expression.rs  mod.rs  snapshot.rs
Advisor/src/skill/: call.rs  definition.rs  mod.rs  registry.rs
Advisor/src/store/: clipboard.rs  cognitive_store.rs  embedding.rs  memory.rs  mod.rs  tfidf_embedding.rs
Advisor/src/synapse/: connection.rs  mod.rs  query.rs
Advisor/src/thought/: chunk.rs  impulse.rs  mod.rs  session.rs
Crown/: CLAUDE.md  Cargo.toml
Crown/src/: blinding.rs  blinding_proof.rs  device_sync.rs  error.rs  founding_tree.rs  keypair.rs  keyring.rs  lib.rs  preferences.rs  profile.rs  recovery.rs  rotation.rs  signature.rs  social.rs  soul.rs  verification.rs
Crown/tests/: integration.rs
Divinity/Android/: CMakeLists.txt
Divinity/Android/Media/: CLAUDE.md
Divinity/Android/jni/: jni_bridge.c
Divinity/Desktop/: CMakeLists.txt
Divinity/Desktop/Media/: CLAUDE.md
Divinity/Desktop/tests/: equipment_tests.cpp
Divinity/Web/: Cargo.toml
Divinity/Web/Media/: CLAUDE.md
Divinity/Web/src/: contacts.rs  email.rs  lib.rs  pager.rs  phone.rs  pwa.rs
Divinity/ffi/: Cargo.toml  cbindgen.toml
Divinity/ffi/src/: advisor_ffi.rs  appcatalog_ffi.rs  bulwark_ffi.rs  commerce_ffi.rs  contacts_ffi.rs  crown_ffi.rs  device_ffi.rs  discovery_ffi.rs  email_ffi.rs  formula_ffi.rs  fortune_ffi.rs  globe_ffi.rs  hall_ffi.rs  helpers.rs  ideas_ffi.rs  jail_ffi.rs  kingdom_ffi.rs  lib.rs  lingo_ffi.rs  magic_ffi.rs  nexus_ffi.rs  omnibus_ffi.rs  oracle_ffi.rs  pager_ffi.rs  phone_ffi.rs  physical_ffi.rs  polity_ffi.rs  pulse_ffi.rs  quest_ffi.rs  regalia_ffi.rs  runtime_ffi.rs  sentinal_ffi.rs  server_ffi.rs  undercroft_ffi.rs  vault_ffi.rs  yoke_ffi.rs  zeitgeist_ffi.rs
Globe/: CLAUDE.md  Cargo.toml
Globe/src/: asset.rs  auth.rs  camouflage.rs  chunk.rs  collaboration.rs  commons.rs  config.rs  deeplink.rs  error.rs  event.rs  event_builder.rs  event_id.rs  filter.rs  health.rs  idea_sync.rs  jurisdiction.rs  kind.rs  lib.rs  name.rs  protocol.rs  signaling.rs
Globe/src/client/: blocking.rs  connection.rs  mod.rs  pool.rs
Globe/src/discovery/: address.rs  beacon.rs  invitation.rs  local.rs  mod.rs  network_key.rs  pairing.rs  profile.rs  upnp.rs
Globe/src/gospel/: config.rs  digest.rs  hints.rs  mod.rs  peer.rs  registry.rs  sync.rs  tier.rs
Globe/src/privacy/: anonymous.rs  mod.rs  padding.rs  relay_forward.rs  shaping.rs
Globe/src/server/: asset_fetch.rs  asset_http.rs  asset_store.rs  database.rs  (+6 more)
Globe/tests/: integration.rs
Hall/: CLAUDE.md  Cargo.toml
Hall/src/: archivist.rs  error.rs  lib.rs  media_utils.rs  scholar.rs  scribe.rs
Hall/tests/: integration.rs
Ideas/: CLAUDE.md  Cargo.toml
Ideas/src/: accessibility.rs  authority.rs  binding.rs  bonds.rs  coinage.rs  commerce.rs  crdt.rs  digit.rs  error.rs  form.rs  header.rs  helpers.rs  interactive.rs  lib.rs  media.rs  package.rs  position.rs  richtext.rs  schema.rs  sheet.rs  slide.rs  textspan.rs  validation.rs
Ideas/tests/: package_integration.rs
Lingo/: CLAUDE.md  Cargo.toml
Lingo/src/: babel.rs  cache.rs  detection.rs  error.rs  lib.rs  provider.rs  symbols.rs  tokenizer.rs  translator.rs  types.rs  vocabulary.rs
Lingo/tests/: integration.rs
Nexus/: CLAUDE.md  Cargo.toml
Nexus/src/: config.rs  error.rs  federation_scope.rs  lib.rs  output.rs  profile.rs  registry.rs  traits.rs
Oracle/: CLAUDE.md  Cargo.toml
Oracle/src/: activation.rs  disclosure.rs  error.rs  hints.rs  lib.rs  recovery.rs  workflow.rs
Polity/: CLAUDE.md  Cargo.toml
Polity/src/: amendment.rs  breach.rs  consent.rs  constitutional_layers.rs  covenant_code.rs  duties.rs  enactment.rs  error.rs  immutable.rs  lib.rs  protections.rs  review.rs  rights.rs  weaponization.rs
Polity/tests/: integration.rs
Quest/: CLAUDE.md  Cargo.toml
Quest/src/: achievement.rs  challenge.rs  config.rs  consortia.rs  cooperative.rs  engine.rs  error.rs  federation_scope.rs  lib.rs  mission.rs  observatory.rs  progression.rs  reward.rs
Regalia/: CLAUDE.md  Cargo.toml
Regalia/src/: component_style.rs  error.rs  lib.rs  reign.rs  sanctum.rs  theme_collection.rs
Regalia/tests/: integration.rs
Sentinal/: CLAUDE.md  Cargo.toml
Sentinal/src/: encryption.rs  error.rs  key_derivation.rs  key_slot.rs  lib.rs  obfuscation.rs  onion.rs  padding.rs  password_strength.rs  random.rs  recovery.rs  secure_data.rs
Sentinal/tests/: integration.rs
Undercroft/: CLAUDE.md  Cargo.toml
Undercroft/AppCatalog/: CLAUDE.md  Cargo.toml
Undercroft/DeviceManager/: CLAUDE.md  Cargo.toml
Undercroft/src/: community.rs  economic.rs  error.rs  federation_scope.rs  lib.rs  metrics.rs  network.rs  privacy_health.rs  quest.rs  snapshot.rs
Vault/: CLAUDE.md  Cargo.toml
Vault/src/: collective.rs  config.rs  custodian.rs  entry.rs  error.rs  lib.rs  manifest.rs  module_state.rs  search.rs  state.rs
Vault/tests/: integration.rs
World/Physical/: CLAUDE.md  Cargo.toml
X/: CLAUDE.md  Cargo.toml
X/src/: blurhash.rs  color.rs  geo.rs  lib.rs  math.rs  value.rs
Yoke/: CLAUDE.md  Cargo.toml
Yoke/src/: ai_provenance.rs  builder.rs  ceremony.rs  error.rs  graph.rs  lib.rs  provenance.rs  relationship.rs  timeline.rs  version.rs
Yoke/tests/: integration.rs
Zeitgeist/: CLAUDE.md  Cargo.toml
Zeitgeist/src/: cache.rs  directory.rs  error.rs  federation_scope.rs  global_trends.rs  lib.rs  merger.rs  router.rs  traits.rs  trending.rs
_Tests/: Cargo.toml
_Tests/src/: lib.rs
_Tests/tests/: collab_scale.rs  phase4_vertical_slice.rs  tower_federation.rs  vertical_slice.rs
(+481 files in other folders)
