[package]
name = "advisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal Omnidea crates
x = { path = "../X" }
crown = { path = "../Crown" }
ideas = { path = "../Ideas" }
magic = { path = "../Magic" }
equipment = { path = "../Equipment" }

# Serialization (workspace standard)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Common types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
log = "0.4"

# Provider capabilities
bitflags = { version = "2", features = ["serde"] }
