[package]
name = "globe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["upnp"]
blocking = []
upnp = ["dep:igd-next"]

[dependencies]
# Internal — Crown only (for signing events)
crown = { path = "../Crown" }

# Common types (needed by collaboration + idea_sync modules)
uuid = { version = "1", features = ["v4", "serde"] }

# Storage (SQLCipher — matches Vault, avoids linker conflicts)
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }

# Async runtime
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"

# Retry/backoff
backon = "1.6"

# Cache
lru = "0.16"

# URL
url = { version = "2", features = ["serde"] }

# Crypto (SHA-256 for event ID computation, getrandom for storage key generation)
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3"

# Local network discovery (mDNS/DNS-SD)
mdns-sd = "0.18"

# UPnP port mapping (feature-gated)
igd-next = { version = "0.16", features = ["aio_tokio"], optional = true }

# System hostname
libc = "0.2"

# Error handling
thiserror = "2"

# Randomness (padding, traffic shaping jitter)
rand = "0.8"

# Common types
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
