[package]
name = "hall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ideas = { path = "../Ideas" }
lingo = { path = "../Lingo" }
sentinal = { path = "../Sentinal" }
x = { path = "../X" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
