[package]
name = "ideas"
version.workspace = true
edition.workspace = true

[dependencies]
x = { path = "../X" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"
