[package]
name = "regalia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal Omnidea crates
x = { path = "../X" }

# Serialization (workspace standard)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Common types
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
