[package]
name = "undercroft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
globe = { path = "../Globe" }
kingdom = { path = "../Kingdom" }
fortune = { path = "../Fortune" }
bulwark = { path = "../Bulwark" }
quest = { path = "../Quest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
log = "0.4"

[dev-dependencies]
url = "2"
