[package]
name = "zeitgeist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Discovery & culture — the collective pulse of the Omnidea network"

[dependencies]
globe = { path = "../Globe" }
crown = { path = "../Crown" }
magical-index = { path = "../World/Digital/MagicalIndex" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"

[dev-dependencies]
