[package]
name = "device-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crown = { path = "../../Crown" }
globe = { path = "../../Globe" }
x = { path = "../../X" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
thiserror = "2"
log = "0.4"
rand = "0.8"
hex = "0.4"
