[package]
name = "omnibus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["upnp"]
upnp = ["globe/upnp"]

[dependencies]
# Identity
crown = { path = "../../../Crown" }

# Networking
globe = { path = "../../../Globe" }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL parsing
url = "2"

# Time
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# TOML config
toml = "0.8"

# Logging
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
