[package]
name = "tower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "omny-tower"
path = "src/main.rs"

[dependencies]
# Node runtime
omnibus = { path = "../Omnibus" }

# Identity
crown = { path = "../../../Crown" }

# Encryption (storage key derivation)
sentinal = { path = "../../../Sentinal" }

# Networking
globe = { path = "../../../Globe" }

# Search
magical-index = { path = "../MagicalIndex" }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "signal", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL parsing
url = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Randomness (privacy transforms: jitter, decoys)
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
